# dome

./: CHANGELOG.md  LICENSE  README.md  const.py  justfile  main.py  project.py  pyproject.toml  todo.txt
core/: __init__.py
docs/: sdk.md
dome/: main.py
dome/core/: __init__.py
dome/execute/: __init__.py
dome/model/: __init__.py
dome/project/: __init__.py
dome/runargs/: __init__.py
dome/sdk/: __init__.py
dome/status/: __init__.py
dome/test/data/project_manual/: build.py  code.txt  codes.py  project.py
dome/vc/: __init__.py
execute/: __init__.py
installer/: main.py
installer/sdk/: _host.py
model/: __init__.py
runargs/: __init__.py
sdk/: __init__.py
tech/: __init__.py
tests/: test_installer_cli.py  test_sdk_recycle.py
vcs/: __init__.py
yelets/: __init__.py
